frontend/test/should_pass/emit_003.grg
rule r {
  x:Node;
  modify{
    emit("Hello World!");
  }
}
