frontend/test/should_fail/rhs_004.grg
rule r {
	modify(x:Node) {}
}